--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -22,7 +22,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
     <td><FONT color=brown><b>Date:</b></font></td>  <td>Monday, 6 October 2025</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Time:</b></font></td>  <td><font color=red>6 - 7 PM ?????</red></td>
+    <td><FONT color=brown><b>Time:</b></font></td>  <td>6:00&mdash;7:30 PM</td>
   </tr>
   <tr>
     <td><FONT color=brown><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Hall</td>
@@ -43,10 +43,26 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <FONT SIZE=+1 color=brown><b>Presenters:</b>  </font>
 <!---------------------------------------------------------------------------------------------------->
 <table border=0>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>Cory Greger</td><td></td>
+    <td><a href='#CG'>Countable Categoricity and the Ryll-Nardzewski Theorem</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>Joshua Im</td><td></td>
+    <td><a href='#JI'>Symmetric and sub-symmetric sums of Dirichlet L-functions</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Jennifer Mackenzie</td><td></td>
     <td><a href='#JM'>The height function associated with a sparse collection:
 	   a Bellman function approach</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>Mark Shiliaev</td><td></td>
+    <td><a href='#MS'></a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 
@@ -61,12 +77,58 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <FONT SIZE=+1 color=brown><b>Abstracts:</b>  </font>
 <!---------------------------------------------------------------------------------------------------->
 <table border=0>
+  <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt>Jennifer Mackenzie</td>
-    <td>The height function associated with a sparse collection: a Bellman function approach</td>
+    <td width=180pt><a hname="#CG">Cory Greger</a></td>
+    <td><font color="FF00FF">Countable Categoricity and the Ryll-Nardzewski Theorem</font></td>
   </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td>We call a set of first-order axioms countably categorical if there is only one countably infinite structure, up to isomorphism, that satisfies them. For example, the axioms describing a dense linear order without endpoints are satisfied uniquely (up to isomorphism) by the rational numbers with their usual order. We provide an exposition of the Ryll-Nardzewski theorem, which characterizes countable categoricity in three equivalent ways, connecting logical, algebraic, and topological perspectives. Along the way, we introduce several model-theoretic tools and results, including types, type spaces, Lindenbaum-Tarski algebras, and the uniqueness of prime models.</td>  
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a hname="#JI">JOshua Im</a></td>
+    <td><font color="FF00FF">Symmetric and sub-symmetric sums of Dirichlet L-functions</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td>We study symmetric sums of the collection L(s,\chi)_{\chi mod m} of Dirichlet L-functions induced by Dirichlet characters
+      mod m, for Re(s)>1. We show that the coefficients of Dirichlet series obtained by any symmetric sum of Dirichlet
+      L-functions vanish unless n\equiv 1 mod m. In addition, we introduce a method for computing the Dirichlet series coefficients in terms of the prime-power factorization of n. Furthermore, we introduce polynomials whose roots are Dirichlet L-functions for a fixed modulus m, and decompose symmetric sums over all characters into sums over subfamilies (e.g., symmetric sums over Dirichlet L-functions of a smaller modulus).</td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a hname="#JM"></a>Jennifer Mackenzie</td>
+    <td><font color="FF00FF">The height function associated with a sparse collection: a Bellman function approach</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
   <tr><td></td>
     <td>Sparse operators have recently emerged as a powerful method to extract sharp constants in harmonic analysis inequalities in the context of  bounding singular integral operators. We investigate the level sets of height functions for sparse collections, or, in other words, weak-type (1,1) inequalities for sparse operators applied to constant functions. We utilize another notable method from dyadic harmonic analysis, which is also famous for its ability to produce sharp constants, namely the Bellman function method. In particular, we find the exact Bellman function maximizing level sets of the sparse operator associated with a binary Carleson sequence when applied to constant functions.</td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a hname="#MS"></a>Mark Shiliaev</td>
+    <td><font color="FF00FF"></font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td></td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a hname="#"></a></td>
+    <td><font color="FF00FF"></font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td></td> 
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 
