--- a/conferences/TAGS26/index.html
+++ b/conferences/TAGS26/index.html
@@ -43,23 +43,28 @@
   &nbsp;  <a href="https://web.ma.utexas.edu/users/jkileel/">Joe Kileel</a>      &nbsp;
               University of Texas <br>
  
+
+  &nbsp;  <a href=" https://math.rice.edu/~sf31/">Sarah Frei</a>      &nbsp;
+             Rice University<br>
+
+      
   &nbsp;  <a href="">Justin Lacini</a>      &nbsp;
               Texas A&amp;M University <br>
  
   &nbsp;  <a href=" https://sites.google.com/site/jacksonsalvatoremorrow/">Jackson Morrow</a>      &nbsp;
               University of North Texas <br>
  
-  &nbsp;  <a href="https://sites.google.com/view/rachel-webb">Rachel Webb</a>      &nbsp;
-              Cornell University <br>
+
+  &nbsp;  <a href=" https://www.math.utoronto.ca/hspink/">Hunter Spink</a>      &nbsp;
+              University of  Toronto <br>
  
   
   &nbsp;  <a href="https://sites.google.com/uic.edu/kftucker">Kevin Tucker</a>      &nbsp;
               University of Illinois at Chicago <br>
  
-  &nbsp;  <a href=""></a>      &nbsp;
-              <br>
+  &nbsp;  <a href="https://sites.google.com/view/rachel-webb">Rachel Webb</a>      &nbsp;
+              Cornell University <br>
  
-  
  
    </td>
   </tr>
