--- a/research/publications.html
+++ b/research/publications.html
@@ -145,28 +145,6 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
   </TD>
  </TR>
 <!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>5
-                 </TD> <TD>
-   <!--------------------------------------------------------------->             
-   <!-------------      Version of August 2021     ----------------->
-   <!--------------------------------------------------------------->             
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/GGEGA.pdf"><IMG SRC="images/pdf.gif"></A></TD>
-     <TD><FONT COLOR="FF00FF">
-      <I>Galois Groups in Enumerative Geometry and Applications</I></FONT>,
-      with 
-       <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
-        Some <A HREF="stories/27_Frobenius/index.html">computations</A> about the splitting types of cubic surfaces.
-      <tt>arXiv.org/2108.07905</tt>.
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
    
 </TABLE>
 
@@ -190,6 +168,28 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 <TABLE>
 
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>5
+</TD> <TD>
+   <!--------------------------------------------------------------->             
+   <!-------------      Version of August 2021     ----------------->
+   <!--------------------------------------------------------------->             
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/GGEGA.pdf"><IMG SRC="images/pdf.gif"></A></TD>
+     <TD><FONT COLOR="FF00FF">
+      <I>Galois Groups in Enumerative Geometry and Applications</I></FONT>,
+      with 
+       <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
+        Some <A HREF="stories/27_Frobenius/index.html">computations</A> about the splitting types of cubic surfaces.
+         Expositiones Mathematicae, <it>to appear</it> <tt>arXiv.org/2108.07905</tt>.
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>6
