--- a/talks.html
+++ b/talks.html
@@ -149,10 +149,11 @@
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <FONT COLOR="AA00FF"><I>(n-1)! Formulas for Double Schubert polynomials</I></font>, 
     <a href="https://icerm.brown.edu/program/semester_program_workshop/sp-f25-w3">Computation in Representation Theory</a>,
     ICERM, Providence, RI, 10 &ndash; 14 November 2025.
-  </li>
+    <a href="talks/25/ICERM.txt">abstract</a>
+ </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
@@ -185,7 +186,7 @@
     <a href="talks/24/Golden.txt">Abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->  
   <li>
     <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>,
     Minisymposium on Spectral Theory and Applications of Schr&ouml;dinger Operators at the
@@ -195,18 +196,18 @@
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>(n-1)! Formulas for double Schubert polynomials</I></font>, 
     <a href="https://tamu-seminar.github.io/alg-comb/"></a>Algebra and Combinatorics Seminar,
     TAMU, 19 September 2025.
     <a href="talks/25/DoubleSchubert.txt">abstract</a>
   </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
