--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -46,53 +46,58 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Anders Bahrami</td><td></td>
-    <td><a href='#JC'></a></td>
+    <td><a href="#JC"></a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Rishabh Gulecha</td><td></td>
-    <td><a href='#JC'></a></td>
+    <td><a href="#JC"></a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Aaryan Sharma</td><td></td>
-    <td><a href='#'></a></td>
+    <td><a href="#"></a></td>
   </tr>
    <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Jack Lao</td><td></td>
-    <td><a href='#'></a></td>
+    <td><a href="#"></a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Jace Castleberry<br>Mayank Chaudhari</td><td></td>
-    <td><a href='#JC'Stability of Discrete Point Charge Systems></a></td>
+    <td><a href="#JC">Stability of Discrete Point Charge Systems></a></td>
   </tr>
    <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Cory Greger</td><td></td>
-    <td><a href='#CG'>Countable Categoricity and the Ryll-Nardzewski Theorem</a></td>
+    <td><a href="#CG">Countable Categoricity and the Ryll-Nardzewski Theorem</a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Joshua Im</td><td></td>
-    <td><a href='#JI'>Symmetric and sub-symmetric sums of Dirichlet L-functions</a></td>
+    <td><a href="#JI">Symmetric and sub-symmetric sums of Dirichlet L-functions</a></td>
   </tr>
    <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Evan Kniffen</td><td></td>
-    <td><a href='#EK'>Stochastic Modeling of Bovine Respiratory Disease Using Agent-Based Modeling</a></td>
+    <td><a href="#EK">Stochastic Modeling of Bovine Respiratory Disease Using Agent-Based Modeling</a></td>
   </tr>
  <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td>Jennifer Mackenzie</td><td></td>
-    <td><a href='#JM'>The height function associated with a sparse collection:
+    <td><a href="#JM">The height function associated with a sparse collection:
 	   a Bellman function approach</a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td>Ahn Viet Nguyen</td><td></td>
+    <td><a href="#AVN"><I>R</I>(<i>K</i><sub>4</sub>-<i>e</i>, <i>K</i><sub>8</sub>-<i>e</i>)=32</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td>Mark Shiliaev</td><td></td>
-    <td><a href='#MS'>On Unconditionality and higher-order Schreier Unconditionality</a></td>
+    <td><a href="#MS">On Unconditionality and higher-order Schreier Unconditionality</a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 
@@ -110,17 +115,17 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
  
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt rowspan=2><a hname="#JC">Jace Castleberry<BR>Mayank Chaudhari</a></td>
+    <td width=180pt rowspan=2 valign=top><a name="JC">Jace Castleberry<BR>Mayank Chaudhari</a></td>
     <td><font color="FF00FF">Stability of Discrete Point Charge Systems</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
-  <tr><td></td>
+  <tr>
     <td>This project analyzes the behavior of critical points of discrete point charge potential systems over differing configurations. We obtain qualitative, quantitative, and numerical results describing the position and quantity of the critical points depending on the positions of the charges. This includes studying the stability of the critical points under dynamic changes to the configuration.</td>  
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#CG">Cory Greger</a></td>
+    <td width=180pt><a name="CG">Cory Greger</a></td>
     <td><font color="FF00FF">Countable Categoricity and the Ryll-Nardzewski Theorem</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -131,7 +136,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#JI">Joshua Im</a></td>
+    <td width=180pt><a name="JI">Joshua Im</a></td>
     <td><font color="FF00FF">Symmetric and sub-symmetric sums of Dirichlet L-functions</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -144,7 +149,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
  
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#EK">Evan Kniffen</a></td>
+    <td width=180pt><a name="EK">Evan Kniffen</a></td>
     <td><font color="FF00FF">Stochastic Modeling of Bovine Respiratory Disease Using Agent-Based Modeling</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -156,7 +161,7 @@ Uncertainty is propagated by Monte Carlo; outcome distributions (attack rate, ti
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#JM"></a>Jennifer Mackenzie</td>
+    <td width=180pt><a name="JM"></a>Jennifer Mackenzie</td>
     <td><font color="FF00FF">The height function associated with a sparse collection: a Bellman function approach</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -164,9 +169,28 @@ Uncertainty is propagated by Monte Carlo; outcome distributions (attack rate, ti
     <td>Sparse operators have recently emerged as a powerful method to extract sharp constants in harmonic analysis inequalities in the context of  bounding singular integral operators. We investigate the level sets of height functions for sparse collections, or, in other words, weak-type (1,1) inequalities for sparse operators applied to constant functions. We utilize another notable method from dyadic harmonic analysis, which is also famous for its ability to produce sharp constants, namely the Bellman function method. In particular, we find the exact Bellman function maximizing level sets of the sparse operator associated with a binary Carleson sequence when applied to constant functions.</td> 
   </tr>
   <!---------------------------------------------------------------------------------------------------->
+
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#MS"></a>Mark Shiliaev</td>
+    <td width=180pt><a name="AVN">Ahn Viet Nguyen</a></td>
+    <td><font color="FF00FF"><I>R</I>(<i>K</i><sub>4</sub>-<i>e</i>, <i>K</i><sub>8</sub>-<i>e</i>)=32</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td>
+      We show that
+      <I>R</I>(<i>K</i><sub>4</sub>-<i>e</i>, <i>K</i><sub>8</sub>-<i>e</i> = 32.
+      The method involves checking several graphs through computer programming with a theoretical framework.
+      This method is inspired by Angeltveit and McKay&apos;s gluing algorithm, as presented in their recent work.
+    </td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+
+
+
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a name="MS"></a>Mark Shiliaev</td>
     <td><font color="FF00FF">On Unconditionality and higher-order Schreier Unconditionality</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -185,7 +209,7 @@ Uncertainty is propagated by Monte Carlo; outcome distributions (attack rate, ti
   
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td width=180pt><a hname="#"></a></td>
+    <td width=180pt><a name=""></a></td>
     <td><font color="FF00FF"></font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -206,6 +230,6 @@ Generously supported by the Smith fund and the Department of Mathematics at Texa
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Thu Sep 18 18:15:39 CDT 2025 by sottile</p>  
+<p>Last modified: Sat Sep 27 16:03:40 CDT 2025 by sottile</p>  
 </BODY>
 </HTML>
