--- a/teaching.html
+++ b/teaching.html
@@ -195,6 +195,16 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <dd>
+    <A HREF=""></a>Khashayar Neshat Taherzadeh, TAMU Ph.D. Student.
+  </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <dd>
+    <A HREF=""></a>Daniel Dale, TAMU Ph.D. Student.
+  </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <dd>
     <A HREF=""></a>John Ajayi, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
@@ -221,6 +231,6 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Aug 22 17:27:42 CDT 2024 by sottile</p>  
+<p>Last modified: Thu Sept 25 22:16:28 CDT 2025 by sottile</p>  
 </body> </html>
  
