--- a/talks.html
+++ b/talks.html
@@ -186,25 +186,26 @@
     <a href="talks/24/Golden.txt">Abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->  
-  <li>
-    <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>,
-    Minisymposium on Spectral Theory and Applications of Schr&ouml;dinger Operators at the
-    <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
-     Austin, TX, 26&ndash;28 September  2025.
-    <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
-   </li>
-  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
 </ul>
 <hr>
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
   <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->  
+  <li>
+    <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>,
+    Minisymposium on Spectral Theory and Applications of Schr&ouml;dinger Operators at the
+    <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
+     Austin, TX, 26&ndash;28 September  2025.
+    <a href="talks/25/TX-LA_Spectral.txt">abstract</a>.
+    <a href="talks/25/TX-LA.pdf">text of talk</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>(n-1)! Formulas for double Schubert polynomials</I></font>, 
-    <a href="https://tamu-seminar.github.io/alg-comb/"></a>Algebra and Combinatorics Seminar,
+    <a href="https://tamu-seminar.github.io/alg-comb/">Algebra and Combinatorics Seminar</a>,
     TAMU, 19 September 2025.
     <a href="talks/25/DoubleSchubert.txt">abstract</a>
   </li>
@@ -545,7 +546,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue May 27 17:01:45 EDT 2025 by sottile</p>  
+<p>Last modified: Sun Sep 28 11:15:21 CDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
