--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -45,23 +45,18 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <table border=0>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td>Anders Bahrami</td><td></td>
-    <td><a href="#JC"></a></td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------->
-  <tr>
     <td>Rishabh Gulecha</td><td></td>
     <td><a href="#JC"></a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td>Aaryan Sharma</td><td></td>
-    <td><a href="#"></a></td>
-  </tr>
-   <!---------------------------------------------------------------------------------------------------->
-  <tr>
     <td>Jack Lao</td><td></td>
     <td><a href="#"></a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>Anders Bahrami</td><td></td>
+    <td><a href="#AB">Validation of Material Point Method and Discontinuous Galerkin solvers for Fluid Structure Interactions</a></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
@@ -96,6 +91,11 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td>Aaryan Sharma</td><td></td>
+    <td><a href="#AS">Complex Potentials Floquet Isospectral to the Discrete Laplacian</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td>Mark Shiliaev</td><td></td>
     <td><a href="#MS">On Unconditionality and higher-order Schreier Unconditionality</a></td>
   </tr>
@@ -112,6 +112,18 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <FONT SIZE=+1 color=brown><b>Abstracts:</b>  </font>
 <!---------------------------------------------------------------------------------------------------->
 <table border=0>
+  
+  
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a name="AB">Anders Bahrami</a></td>
+    <td><font color="FF00FF">Validation of Material Point Method and Discontinuous Galerkin solvers for Fluid Structure Interactions</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td>The Material Point Method (MPM) is a numerical method useful for efficiently simulating large deformation solids problems that are typically difficult for other numerical methods like Finite Element Methods (FEM). However, issues with the original MPM formulation such as cell crossing instability and an inadequate handling of prestress often lead to unwanted oscillations and other errors like incorrect computed wave speeds. In recent years, the Dual Domain Material Point (DDMP) and Local Stress Difference (LSD) enhancements to MPM were introduced to mitigate both of these issues respectively, and such enhancements have allowed the application of MPM to more difficult problems.</td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
  
   <!---------------------------------------------------------------------------------------------------->
   <tr>
@@ -186,7 +198,20 @@ Uncertainty is propagated by Monte Carlo; outcome distributions (attack rate, ti
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 
-
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td width=180pt><a name="AS">Aaryan Sharma </a></td>
+    <td><font color="FF00FF">Complex Potentials Floquet Isospectral to the Discrete Laplacian</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><td></td>
+    <td>It is known that for even values of <i>n</i>&gt;2,
+      there exist nonzero complex-valued <i>n</i><b>Z</b>-periodic potential functions on the one-dimensional square lattice
+      that are Floquet-isospectral to the zero potential. We conjecture that for all <i>n</i>&gt;3, there exist such
+      nonzero potential functions. We present our progress towards proving this conjecture using methods from
+      commutative algebra and experimental data acquired via Macaulay2.</td> 
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
 
   <!---------------------------------------------------------------------------------------------------->
   <tr>
@@ -230,6 +255,6 @@ Generously supported by the Smith fund and the Department of Mathematics at Texa
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sat Sep 27 16:03:40 CDT 2025 by sottile</p>  
+<p>Last modified: Tue Sep 30 09:49:26 CDT 2025 by sottile</p>  
 </BODY>
 </HTML>
