--- a/talks.html
+++ b/talks.html
@@ -166,9 +166,9 @@
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
-  <li> <FONT COLOR="AA00FF"><I>TBA</I></font>,
+  <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Red</a> <!--Advanced</a>,-->
-     4 October 2025. <a href="talks/24/Five-color.txt"></a>
+     4 October 2025. <a href="talks/25/ShapeOfSpace.txt">abstract</a>
   </li>
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -546,7 +546,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Sep 28 11:15:21 CDT 2025 by sottile</p>  
+<p>Last modified: Mon Sep 29 12:42:49 CDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
