--- a/conferences/TAGS25/abstracts.html
+++ b/conferences/TAGS25/abstracts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+<html style="margin-left: 380px;" lang="en">
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <title>Texas Algebraic Geometry Symposium 2025</title>
 </head><body style="background-color:#baccf0;">
