--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+<html style="margin-left: 380px;" lang="en">
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <title>Texas Algebraic Geometry Symposium 2025</title>
 </head><body style="background-color:#baccf0;">
@@ -9,7 +10,7 @@
 <table border=0>
   <tbody>
   <tr>
-   <td rowspan="3" width="300"><img src="MenosBlocker.jpg" height="502"></td>
+   <td rowspan="3" width="300"><img src="MenosBlocker.jpg" height="502" alt="Photograph of a statue with Bocker building in background"></td>
    <td width="600">
      <h2>Texas Algebraic Geometry Symposium</h2><br>
      Texas A&amp;M University 28 &ndash; 30 March 2025.<br><br>
