--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -25,7 +25,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
     <td><FONT color=brown><b>Time:</b></font></td>  <td>6:00&mdash;7:30 PM</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Hall</td>
+    <td><FONT color=brown><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Building</td>
   </tr>
   <tr>
     <td><FONT color=brown><b>Organizer:&nbsp;</b></font></td>
