--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -18,14 +18,14 @@ Course <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025
 <hr>
 <!---------------------------------------------------------------------------->
 
-<!--Scheduling for first mid-term. Last full week of September.
-Go to <a href="https://lettucemeet.com/l/7lDA6">Lettuce meet</a> and indicate which times you are available for the first
+Scheduling for second mid-term. Last week of October.
+Go to <a href="https://lettucemeet.com/l/pRLgN">Lettuce meet</a> and indicate which times you are available for the second
 midterm exam that week.
-Note that it will be challenging to find a 2 to 3 hour slot tsat works for everyone.-->
-<b><font color=brown>First Midterm:</font></b>
-This will be held in Blocker 628 on Wednesday September 24 from 6&mdash;9 PM.   Food will be provided.<br>
+Note that it will be challenging to find a 2 to 3 hour slot that works for everyone.-->
 
-<i>If this time is not possible for you, I will schedule an alternatice time to take a make up exam.</i>
+<!--<b><font color=brown>First Midterm:</font></b>
+This will be held in Blocker 628 on Wednesday September 24 from 6&mdash;9 PM.   Food will be provided.<br>
+<i>If this time is not possible for you, I will schedule an alternative time to take a make up exam.</i> -->
 
   
 <!---------------------------------------------------------------------------->
@@ -186,12 +186,12 @@ Homework is on a <a href="653_HW.html">separate page</a>
     </dd>
    <dd>Note that late homework is not accepted.
    </dd>
-    <dd><font color=red><b>Zeroth homework:</b> Read this page and the course
+    <dd><font color=red></font><b>Zeroth homework:</b> Read this page and the course
   <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025-College-Station-MATH-653-600-%2812019%29-ALGEBRA-I.pdf?locale=en-US">syllabus</a>, found in Canvas, and send a note to Frank
     (by email, 653 in the subject line) that you have read and understood the syllabus and course homepage and
     pledge to abide by the course rules as detailed in those documents.
     Please also include in that a brief description of who you are, your mathematical background, what you hope to get out of the course,
-    and anything else that you want me to know about you.</font>
+    and anything else that you want me to know about you.
    </dd>
    <dd> Because I understand the pressures that advanced undergraduates and graduates face, I will drop your lowest homework score.
    </dd>
