--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -18,14 +18,16 @@ If you do use them for your own homework, please edit the header and put in your
 <!---------------------------------------------------------------------------------------------------->
 <dl>
 <!---------------------------------------------------------------------------------------------------->
-<dd>  <b>Assignment 5:</b>  <a href="653_HW/HW05.tex">LaTeX</a> source code. Due at the start of your exam.
+<dd>  <b>Assignment 6:</b>  <a href="653_HW/HW06.tex">LaTeX</a> source code. Due 9 October at the start of class.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
+<!---------------------------------------------------------------------------------------------------->
+<dd>  <b>Assignment 5:</b>  <a href="653_HW/HW05.tex">LaTeX</a> source code. Due at the start of your exam.
+<!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <dd>  <b>Assignment 4:</b>  <a href="653_HW/HW04.tex">LaTeX</a> source code. Due 18 September at the start of class.
 <!---------------------------------------------------------------------------------------------------->
-<hr>
 <!---------------------------------------------------------------------------------------------------->
 <dd>  <b>Assignment 3:</b>  <a href="653_HW/HW03.tex">LaTeX</a> source code. Due 11 September at the start of class.
   <font color=red>Note that one problem is to be handed in separately to Frank</font></dd>
