--- a/advising/index.html
+++ b/advising/index.html
@@ -237,6 +237,21 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
+      <A HREF=""></a>Khashayar Neshat Taherzadeh, 2025&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+      <A HREF=""></a>John Ajayi, 2025&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+      <A HREF=""></a>Danile Dale, 2025&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
       <A HREF=""></a>Ruzho Sagayaraj, 2024&ndash;
   </li>
  <!------------------------------------------------------------------>
