--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     Numerical algebraic geometry, applications of algebraic geometry, algebraic geometry in spectral theory,
     real algebraic geometry,
     algebraic combinatorics,  Hopf Algebras, Discrete and Computational Geometry, tropical
-    geometry, spectral theory. 
+    geometry. 
    <!---------------------------------------------------------------------------->
  <!--  <hr> -->
    <!---------------------------------------------------------------------------->
