--- a/research.html
+++ b/research.html
@@ -185,10 +185,16 @@ Read More:
   <ul>
     <li> National Science Foundation Standard Grant
       <font color=blue>Combinatorial Algebraic Geometry for Spectral Theory and Galois Groups</font>,
-        1 August 2022  &ndash; 31 July 2025. $303,805.
+        1 August 2022  &ndash; 31 July 2026. $303,805.
         <A HREF=""></a>DMS-2201005.
 <!--       <a href="grants/1501370.pdf">proposal</a>-->
-   </li>
+    </li>
+    <li>
+      Simon Foundation  Travel Support for Mathematicians:
+      <font color=blue>Computational and Applied Algebraic Geometry</font>,
+      1 September 2025&ndash;31 August 2030.  TSM-00014009.
+      
+    </li>
 </ul>
    <!------------------------------------------------------------------------> 
 <hr>
