--- a/research/publications.html
+++ b/research/publications.html
@@ -88,7 +88,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
       <i>The Spectral Edges Conjecture Via Corners</i></FONT>,
        with 
      <A HREF="https://mattfaust.github.io/">Matt Faust</A>.
-     18 pages.
+     18 pages. <tt>arXiv.org/2510.10143</tt>.
      </TD>
     </TR>
    </TABLE>
