--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -18,10 +18,11 @@ Course <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025
 <hr>
 <!---------------------------------------------------------------------------->
 
-Scheduling for second mid-term. Last week of October.
-Go to <a href="https://lettucemeet.com/l/loMeM">Lettuce meet</a> and indicate which times you are available for the second
+Second mid-term exam will be on Monday October 27 in the evening.
+
+<!--  <a href="https://lettucemeet.com/l/loMeM">Lettuce meet</a> and indicate which times you are available for the second
 midterm exam that week.
-Note that it will be challenging to find a 2 to 3 hour slot that works for everyone.
+Note that it will be challenging to find a 2 to 3 hour slot that works for everyone. -->
 
 <!--<b><font color=brown>First Midterm:</font></b>
 This will be held in Blocker 628 on Wednesday September 24 from 6&mdash;9 PM.   Food will be provided.<br>
