--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -194,8 +194,8 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.loria.fr/~everett/">Hazel Everett</A><sup>&#134;</sup>,
      LORIA - Universit&eacute; de Nancy 2, France. 
  
-<!-- BlochDeg 2022  Toric-Fermi-->
-<dd><IMG SRC="images/dots/one.png">
+<!-- BlochDeg 2022  SECVC 2025   CPDeg Bestiary Dirac Toric-Fermi-->
+<dd><IMG SRC="images/dots/two.png">
     <A HREF="https://mattfaust.github.io">Matthew Faust</A>,
      Texas A&amp;M University.
 
@@ -417,10 +417,14 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.math.uiuc.edu/~reznick/">Bruce Reznick</A>,
     University of Illinois at Urbana-Champaign. 
 
+<!-- CPDeg Bestiary  -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF=""></a>Jonah Robinson, University of Michigan.
+
 <!-- Grothendieck 2006 -->
 <dd><IMG SRC="images/dots/one.png">
-    <A HREF="https://www.coloradomesa.edu/directory/computer-science-mathematics-statistics/shawn-robinson.html">Shawn
-   Robinson</a>, Colorado Mesa University, Grand Junction.
+    <A HREF="https://scholar.google.com/citations?user=McgbposAAAAJ&hl=en">Shawn
+   Robinson</a>, Aspen High School
 
 <!-- jeux 2001 -->
 <dd><IMG SRC="images/dots/one.png">
