added St. Louis talk

--- a/talks.html
+++ b/talks.html
@@ -163,6 +163,7 @@
     Saint Louis University, St. Louis, MO
     October 18&ndash;19, 2025.
         <a href="talks/25/CPD.txt">abstract</a>
+    <a href="talks/25/StLouis.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
