--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -18,7 +18,8 @@ Course <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/s164fxvcl/Fall-2025
 <hr>
 <!---------------------------------------------------------------------------->
 
-Second mid-term exam will be on Monday October 27 in the evening.
+Second mid-term exam will be on Monday October 27 in Blocker 628.
+We have the room from 6-9.
 
 <!--  <a href="https://lettucemeet.com/l/loMeM">Lettuce meet</a> and indicate which times you are available for the second
 midterm exam that week.
