--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -194,7 +194,7 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.loria.fr/~everett/">Hazel Everett</A><sup>&#134;</sup>,
      LORIA - Universit&eacute; de Nancy 2, France. 
  
-<!-- BlochDeg 2022  SECVC 2025   CPDeg Bestiary Dirac Toric-Fermi-->
+<!-- BlochDeg 2022  SECVC 2025      CPDeg Bestiary Dirac Toric-Fermi -->
 <dd><IMG SRC="images/dots/two.png">
     <A HREF="https://mattfaust.github.io">Matthew Faust</A>,
      Texas A&amp;M University.
@@ -293,7 +293,7 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/six.png">
    <A HREF="http://people.math.gatech.edu/~aleykin3/">Anton Leykin</A>,  Georgia Tech.
 
-<!-- TypeA 2018  Fundamental 2019 -->
+<!-- TypeA 2018  Fundamental 2019  k=2 2025 -->
 <dd><img src="images/dots/two.png">
 <!--  <a href="http://math.sysu.edu.cn/node/504">Changzheng Li</a>, Sun Yat Sen University, Guangzhou.-->
   <a href="http://math.sysu.edu.cn/gagp/czli">Changzheng Li</a>, Sun Yat Sen University,  Guangzhou, Chins.
@@ -483,8 +483,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!-- flags 2006 -->
 <dd><IMG SRC="images/dots/one.png">
-    <A HREF="http://www.math.umass.edu/Directory/personal.html?email=sivan">Yuval
-    Sivan</A>.  
+    <A HREF="http://www.math.umass.edu/Directory/personal.html?email=sivan"></a>Yuval Sivan.
 
 <!-- wachspress  
 <dd><IMG SRC="images/dots/vapourware.png">
@@ -493,8 +492,7 @@ I have had the good fortune to work with the following mathematicians.
   
 <!-- lowerBounds 2006  flags 2006  orientation 2012? -->
 <dd><IMG SRC="images/dots/three.png">
-     <A HREF="http://www.math.kent.edu/~soprunova/">Evgenia Soprunova</A>,
-         Kent State University.
+     <A HREF="http://www.math.kent.edu/~soprunova/">Evgenia Soprunova</A>, Kent State University.
 
 <!-- switching 1996  jeux 2001 -->
 <dd><IMG SRC="images/dots/two.png">
@@ -575,7 +573,7 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/four.png">
      <A HREF="http://www.math.tamu.edu/~thomasjyahl">Thomas Yahl</A>,  Texas A&amp;M University.
 
- <!-- TypeA 2018 -->
+ <!-- TypeA 2018   k=2 2025 -->
 <dd><img src="images/dots/one.png">
   <a href=""></a>Mingzhi Yang, Sun Yat Sen University, Guangzhou, China.
   
@@ -587,6 +585,10 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www.math.uiuc.edu/~ayong/">Alex Yong</A>, University
     of Illinois.
+
+<!--  Increasing 2025 -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="http://www.math.uiuc.edu/~ayong/"></a>Tuanyi Yu, UQAM.
 
 <!-- Mod4 2012  Newmodfour 2014  Injectivity 2017  GenWronski 2020 -->
 <dd><IMG SRC="images/dots/four.png">
