--- a/research/stories/Bestiary/Bestiary.html
+++ b/research/stories/Bestiary/Bestiary.html
@@ -193,7 +193,7 @@
   <tr>
     <td><a href="Bestiary/manyPartialFlats/graph.eps"><img src="Bestiary/manyPartialFlats/graph.png"></a></td>
     <td><a href="Bestiary/manyPartialFlats/polytope.png"><img src="Bestiary/manyPartialFlats/polytope.png"></a></td>
-    <td><a href="Bestiary/manyPartialFlats/BV_general_big.png"><img src="Bestiary/manyPartialFlats/BV_general.png" height=150p></a></td>
+    <td><a href="Bestiary/manyPartialFlats/Pict_11111_23.png"><img src="Bestiary/manyPartialFlats/Pict_11111_23_sm.gif" height=150p></a></td>
     <td><a href="Bestiary/manyPartialFlats/BV_1component_big.png"><img src="Bestiary/manyPartialFlats/BV_1component.png" height=150p></a></td>
     <td><a href="Bestiary/manyPartialFlats/BV_2components_big.png"><img src="Bestiary/manyPartialFlats/BV_2components.png" height=150p></a></td>
 
